Доделал фильтрацию по дате Добавил вариативности тестовым данным в базе Сделал что запрос командировок возвращает только тех сотрудников, которые подчиняются пользователю непосредсвенно. Не думаю что имеет смысл давать доступ к сотрудникам нижестоящих подразделений. Субординация и всё такое Нужно будет сделать для админа запрос всех командировок без ограничения по департаменту