@@ -5,6 +5,7 @@ import org.springframework.data.jpa.domain.Specification;
 import ru.geekbrains.javacommand.command.entities.Errand;
 import ru.geekbrains.javacommand.command.repositories.specifications.ErrandSpecifications;
 
+import java.time.OffsetDateTime;
 import java.util.Map;
 
 @Getter
@@ -15,14 +16,24 @@ public class ErrandFilter {
     public ErrandFilter(Map<String, String> params) {
         spec = Specification.where(null);
 
-        if (params.containsKey("employee") && !params.get("employee").trim().isEmpty()) {
+        if (params.containsKey("employee") && !params.get("employee").isBlank()) {
             Long employeeId = Long.parseLong(params.get("employee"));
             spec = spec.and(ErrandSpecifications.employeeIdIs(employeeId));
         }
 
-        if (params.containsKey("errandMatterType") && !params.get("errandMatterType").trim().isEmpty()) {
+        if (params.containsKey("errandMatterType") && !params.get("errandMatterType").isBlank()) {
             Long errandMatterTypeId = Long.parseLong(params.get("errandMatterType"));
             spec = spec.and(ErrandSpecifications.errandMatterTypeIdIs(errandMatterTypeId));
+        }
+
+        if (params.containsKey("dateStart1") && !params.get("dateStart1").isBlank()) {
+            OffsetDateTime dateStart1 = OffsetDateTime.parse(params.get("dateStart1"));
+            spec = spec.and(ErrandSpecifications.dateStartGreaterOrEqualsThan(dateStart1));
+        }
+
+        if (params.containsKey("dateStart2") && !params.get("dateStart2").isBlank()) {
+            OffsetDateTime dateStart2 = OffsetDateTime.parse(params.get("dateStart2"));
+            spec = spec.and(ErrandSpecifications.dateStartLessOrEqualsThan(dateStart2));
         }
 
     }
